refactor: 불필요한 로깅 및 메서드 제거, 코드 간소화